--- a/index.html
+++ b/index.html
@@ -55,3 +55,19 @@
         <nav>
             <ul id="footer-links">
                 <li><a href="#">Meta</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">Api</a></li>
+                <li><a href="#">Privacidade</a></li>
+                <li><a href="#">Termos</a></li>
+                <li><a href="#">Principais contas</a></li>
+                <li><a href="#">Hashtags</a></li>
+                <li><a href="#">Localização</a></li>
+                <li><a href="#">Instagra Lite</a></li>
+            </ul>
+        </nav>
+        <p id="coyright">&copy;2022 Instagram from Meta</p>
+    </footer>
+</body>
+</html>
